--- a/WoW/AddOns/Details/CHANGES.txt
+++ b/WoW/AddOns/Details/CHANGES.txt
@@ -1,10 +1,10 @@
-lightweight tag 778e02b5837074dabacb176e6de04a3f8ced0db4 DetailsRetail.9.0.2.8154.144(b)
+lightweight tag af14e0810659c5779cbe0fa7dee375c8208adfea DetailsRetail.9.0.2.8156.144
 Author:	Tercio Jose <terciob19@hotmail.com>
-Date:	Tue Jan 19 12:05:46 2021 -0300
+Date:	Thu Jan 21 17:52:08 2021 -0300
 
-commit 778e02b5837074dabacb176e6de04a3f8ced0db4
+commit af14e0810659c5779cbe0fa7dee375c8208adfea
 Author: Tercio Jose <terciob19@hotmail.com>
-Date:   Tue Jan 19 12:05:46 2021 -0300
+Date:   Thu Jan 21 17:52:08 2021 -0300
 
-    updated nicktag to version 14
+    General fixes
 
